# acoustic_gpu

./: .gitignore  LICENSE  README.md  benchmark_bristol.py  pyproject.toml  requirements.txt
examples/: 01_flat_surface.py  02_tubular_surface.py  03_irregular_surface.py  04_tfm_immersion.py
src/acoustic_gpu/: __init__.py  config.py
src/acoustic_gpu/imaging/: __init__.py  tfm.py
src/acoustic_gpu/raytracing/: __init__.py  cpu_ref.py  kernels.py
src/acoustic_gpu/surfaces/: __init__.py  base.py  estimation.py  flat.py  irregular.py  tubular.py
src/acoustic_gpu/utils/: __init__.py  synthetic.py  visualization.py
tests/: test_benchmark.py  test_flat.py  test_irregular.py  test_tfm.py  test_tubular.py
